ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-go-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test-go-app.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-go-app
                port:
                  number: 8080
